Fixing package.json deps

--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     }
   ],
   "scripts": {
-    "test": "lint qunit"
+    "test": "qunit"
   },
   "dependencies": {
     "jquery": ">=1.7"
   },
   "devDependencies": {
+    "grunt": "~0.3",
     "grunt-contrib-jshint": "~0.8",
     "grunt-contrib-uglify": "~0.3",
     "grunt-contrib-qunit": "~0.4"
