fix package.json and npm test

--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     }
   ],
   "scripts": {
-    "test": "qunit"
+    "test": "grunt --verbose"
   },
   "dependencies": {
     "jquery": ">=1.7"
   },
   "devDependencies": {
     "grunt": "~0.4",
+    "qunit": "latest",
     "grunt-contrib-jshint": "~0.8",
     "grunt-contrib-uglify": "~0.3",
     "grunt-contrib-qunit": "~0.4"
