--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "qunit": "latest",
     "grunt-contrib-jshint": "~0.8",
     "grunt-contrib-uglify": "~0.3",
-    "grunt-contrib-qunit": "~0.4"
+    "grunt-contrib-qunit": "latest"
    },
   "keywords": [
     "validate",
