--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
   "devDependencies": {
 	"jsdoc": "3.*",
 	"eslint": "3.*",
-    "grunt": "0.*",
-    "grunt-cli": "0.*",
+    "grunt": "latest",
+    "grunt-cli": "latest",
     "qunit": "latest",
-    "grunt-contrib-jshint": "~0.8",
-    "grunt-contrib-uglify": "~0.3",
+    "grunt-contrib-jshint": "latest",
+    "grunt-contrib-uglify": "latest",
+	"grunt-jsdoc": "latest",
     "grunt-contrib-qunit": "latest"
    },
   "keywords": [
