--- a/build.properties
+++ b/build.properties
@@ -4,4 +4,5 @@ GoogleCompiler = tools/compiler.jar
 srcdir = src
 distdir = dist
 
+target = jquery.validarium.js
 target.min = jquery.validarium.min.js
