--- a/build.xml
+++ b/build.xml
@@ -30,24 +30,7 @@
        <echo message="${target.min} built." />
     </target>
 
-    <target name="minfiles">
-      <mkdir dir="${distdir}/min" />
-         <apply executable="java" parallel="false" verbose="true" failonerror="true" dest="${distdir}/min">
-<fileset dir="${srcdir}">
-                <include name="*.js" />
-            </fileset>
-            <arg line="-jar" />
-            <arg path="${GoogleCompiler}" />
-            <arg value="--warning_level" />
-            <arg value="QUIET" />
-            <arg value="--js_output_file" />
-            <targetfile />
-            <arg value="--js" />
-            <mapper type="glob" from="*.js" to="*.js" />
-        </apply>
-    </target>
-
-    <target name="build" depends="jquery.validarium, jquery.validarium.min, minfiles"/>
+    <target name="build" depends="jquery.validarium, jquery.validarium.min"/>
 
     <target name="clean">
         <delete dir="${distdir}" />
